# Gymnasium-moon-lander

./: .gitignore  README.md  pyproject.toml
outputs/: benchmark.csv  benchmark.md
outputs/scripted_hover_descent/attitude_recovery/: metrics.json
outputs/scripted_hover_descent/crossrange/: metrics.json
outputs/scripted_hover_descent/low_fuel/: metrics.json
outputs/scripted_hover_descent/nominal/: metrics.json
outputs/tvlqr_tracking/attitude_recovery/: metrics.json
outputs/tvlqr_tracking/crossrange/: metrics.json
outputs/tvlqr_tracking/low_fuel/: metrics.json
outputs/tvlqr_tracking/nominal/: metrics.json
src/gymnasium_moon_lander/: __init__.py  allocation.py  artifacts.py  cli_benchmark.py  cli_simulate.py  controllers.py  dynamics.py  hamiltonian_mpc.py  loader.py  models.py  random_rollout.py  scenarios.py  scoring.py  simulation.py  terrain.py  tracking.py  utils.py
src/gymnasium_moon_lander.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_allocation.py  test_dynamics_and_events.py  test_end_to_end.py  test_legacy.py  test_scoring.py
