[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gymnasium-moon-lander"
version = "0.1.0"
description = "Random-policy LunarLander rollout animation demo using Gymnasium."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "gymnasium[box2d]>=1.1.1",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pillow>=10.0",
  "scipy>=1.13",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
